# IOCP_CHAT_SERVER

./: .gitignore  CMakeLists.txt  README.md  main.cpp
authentication/: AuthManager.cpp  AuthManager.h  Login.cpp  Login.h  SignUp.cpp  SignUp.h  auth_store.h  auth_types.h
chat/: Group.cpp  Group.h  GroupManager.cpp  GroupManager.h  MessageRouter.cpp  MessageRouter.h
client/: Client.cpp  Client.h  main.cpp
datastructure/: Mpsc.h  fixedQueue.h  table.h
filetransfer/: FIleDownload.cpp  FileTransferManager.cpp  FileTransferManager.h
network/: IOCPManager.cpp  IOCPManager.h  IOContext.h
offlineManager/: ManageOffline.cpp  ManageOffline.h
pool/: IOContextPool.h  PacketPool.cpp  PacketPool.h  SessionPool.cpp  SessionPool.h
protocol/: Packet.cpp  Packet.h  PacketHeader.h  PacketTypes.h
server/: Server.cpp  Server.h
session/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
token/: token.h  userInfo.h
utils/: Logger.cpp  Logger.h
